Adicionando informações a seção do usuário

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     </head>
     <body>
         <div class="app">
-            <section class="card">user</section>
+            <section class="card user">
+                <picture>
+                    <img src="/assets/perfil.jpg" alt="" />
+                </picture>
+
+                <div class="user--content">
+                    <h1>Matheus Costa</h1>
+                    <p>Desenvolvedor Iniciante Frontend</p>
+                </div>
+            </section>
 
             <section class="card">about</section>
 
