Adicionando Link e a Seção Sobre

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         />
 
         <link rel="stylesheet" href="/styles/global.css" />
+        <script src="https://unpkg.com/@phosphor-icons/web"></script>
     </head>
     <body>
         <div class="app">
@@ -24,12 +25,65 @@
                 <div class="user--content">
                     <h1>Matheus Costa</h1>
                     <p>Desenvolvedor Iniciante Frontend</p>
+                    <div class="social">
+                        <a href="#" class="social-link" target="_blank">
+                            <i class="ph ph-linkedin-logo"></i>
+                        </a>
+                        <a
+                            href="https://github.com/montinne"
+                            class="social-link"
+                            target="_blank"
+                        >
+                            <i class="ph ph-github-logo"></i>
+                        </a>
+                        <a href="#" class="social-link" target="_blank">
+                            <i class="ph ph-instagram-logo"></i>
+                        </a>
+                        <a href="#" class="social-link" target="_blank">
+                            <i class="ph ph-facebook-logo"></i>
+                        </a>
+                        <a
+                            href="https://youtube.com/@matheusmontinne"
+                            class="social-link"
+                            target="_blank"
+                        >
+                            <i class="ph ph-youtube-logo"></i>
+                        </a>
+                    </div>
                 </div>
             </section>
 
-            <section class="card">about</section>
+            <section class="card about">
+                <h2 class="subtitle">Sobre</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Excepturi repudiandae mollitia nulla sit maiores ab, aperiam
+                    similique quia fugiat neque facilis asperiores aut vel
+                    dolorum in reprehenderit eligendi hic architecto?
+                </p>
 
-            <section class="card projects">projects</section>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                    velit quos cumque itaque reprehenderit minus mollitia
+                    facere. Consectetur nesciunt magnam, ea, ut numquam illum
+                    animi, incidunt expedita quod maxime sapiente!
+                </p>
+
+                <p>
+                    Lorem ipsum dolor sit
+                    <a
+                        href="https://youtube.com/@matheusmontinne"
+                        target="_blank"
+                        >amet consectetur</a
+                    >
+                    adipisicing elit. Perferendis nostrum ipsum tempora labore
+                    fugit.
+                </p>
+            </section>
+
+            <section class="card projects">
+                <h2 class="subtitle">Projetos</h2>
+            </section>
         </div>
     </body>
 </html>
