--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://portfolio-leonardovargas.netlify.app/"
+            content="https://portfolio-matheusmontinne.netlify.app/"
         />
         <meta property="og:title" content="Leonardo Vargas - Portfólio" />
         <meta
@@ -41,14 +41,14 @@
         />
         <meta
             property="og:image"
-            content="https://portfolio-leonardovargas.netlify.app/assets/eu.jpg"
+            content="https://portfolio-matheusmontinne.netlify.app/assets/eu.jpg"
         />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta
             property="twitter:url"
-            content="https://portfolio-leonardovargas.netlify.app/"
+            content="https://portfolio-matheusmontinne.netlify.app/"
         />
         <meta property="twitter:title" content="Leonardo Vargas - Portfólio" />
         <meta
@@ -57,7 +57,7 @@
         />
         <meta
             property="twitter:image"
-            content="https://portfolio-leonardovargas.netlify.app/assets/eu.jpg"
+            content="https://portfolio-matheusmontinne.netlify.app/assets/eu.jpg"
         />
     </head>
     <body>
@@ -81,7 +81,7 @@
                         <a
                             title="link para a rede social linkedin"
                             aria-label="link para a rede social linkedin"
-                            href="https://www.linkedin.com/in/leonardo-luis-de-vargas/"
+                            href="#"
                             class="social__link"
                             target="_blank"
                         >
@@ -91,7 +91,7 @@
                         <a
                             title="link para a rede social github"
                             aria-label="link para a rede social github"
-                            href="https://github.com/leovargasdev"
+                            href="https://github.com/montinne/"
                             class="social__link"
                             target="_blank"
                         >
@@ -101,7 +101,7 @@
                         <a
                             title="link para a rede social youtube"
                             aria-label="link para a rede social youtube"
-                            href="https://www.youtube.com/@leovargas"
+                            href="https://www.youtube.com/@matheusmontinne"
                             class="social__link"
                             target="_blank"
                         >
@@ -111,7 +111,7 @@
                         <a
                             title="link para a rede social instagram"
                             aria-label="link para a rede social instagram"
-                            href="https://www.instagram.com/leuvargas"
+                            href="#"
                             class="social__link"
                             target="_blank"
                         >
@@ -121,21 +121,11 @@
                         <a
                             title="link para a rede social twitter"
                             aria-label="link para a rede social twitter"
-                            href="https://twitter.com/leovargasdev"
+                            href="https://twitter.com/matheusmontinne"
                             class="social__link"
                             target="_blank"
                         >
                             <i class="ph ph-twitter-logo"></i>
-                        </a>
-
-                        <a
-                            title="link para a rede social twitch"
-                            aria-label="link para a rede social twitch"
-                            href="https://www.twitch.tv/leovargasdev"
-                            class="social__link"
-                            target="_blank"
-                        >
-                            <i class="ph ph-twitch-logo"></i>
                         </a>
                     </div>
                 </div>
