--- a/index.html
+++ b/index.html
@@ -25,39 +25,45 @@
         <meta name="title" content="Matheus Costa - Portfólio" />
         <meta
             name="description"
-            content="Apaixonado pelo universo da programação, atualmente estou focado em aprimorar meus conhecimentos na área do frontend com React e NextJS. Um dos motivos pelos quais escolhi o ramo da programação é a oportunidade de criar projetos que possam beneficiar a vida das pessoas por meio da tecnologia."
+            content="Estou sempre ansioso para aprender e crescer como
+            desenvolvedor, enquanto trabalho para criar experiências
+            incríveis na web."
         />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://portfolio-matheusmontinne.netlify.app/"
+            content="https://matheusmontinne.netlify.app/"
         />
-        <meta property="og:title" content="Leonardo Vargas - Portfólio" />
+        <meta property="og:title" content="Matheus Costa - Portfólio" />
         <meta
             property="og:description"
-            content="Apaixonado pelo universo da programação, atualmente estou focado em aprimorar meus conhecimentos na área do frontend com React e NextJS. Um dos motivos pelos quais escolhi o ramo da programação é a oportunidade de criar projetos que possam beneficiar a vida das pessoas por meio da tecnologia."
+            content="Estou sempre ansioso para aprender e crescer como
+            desenvolvedor, enquanto trabalho para criar experiências
+            incríveis na web."
         />
         <meta
             property="og:image"
-            content="https://portfolio-matheusmontinne.netlify.app/assets/eu.jpg"
+            content="https://matheusmontinne.netlify.app/assets/eu.jpg"
         />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta
             property="twitter:url"
-            content="https://portfolio-matheusmontinne.netlify.app/"
+            content="https://matheusmontinne.netlify.app/"
         />
-        <meta property="twitter:title" content="Leonardo Vargas - Portfólio" />
+        <meta property="twitter:title" content="Matheus Costa - Portfólio" />
         <meta
             property="twitter:description"
-            content="Apaixonado pelo universo da programação, atualmente estou focado em aprimorar meus conhecimentos na área do frontend com React e NextJS. Um dos motivos pelos quais escolhi o ramo da programação é a oportunidade de criar projetos que possam beneficiar a vida das pessoas por meio da tecnologia."
+            content="Estou sempre ansioso para aprender e crescer como
+            desenvolvedor, enquanto trabalho para criar experiências
+            incríveis na web."
         />
         <meta
             property="twitter:image"
-            content="https://portfolio-matheusmontinne.netlify.app/assets/eu.jpg"
+            content="https://matheusmontinne.netlify.app/assets/eu.jpg"
         />
     </head>
     <body>
